--- a/first-one/src/index.css
+++ b/first-one/src/index.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: aliceblue;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 html, body {
